--- a/css/style.css
+++ b/css/style.css
@@ -38,3 +38,8 @@ body {
 .footer-links li a:hover {
   color: rgba(255, 255, 255, 1);
 }
+
+.price {
+  font-size: 16px;
+  color: darkslategray;
+}
