--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,6 @@
 body {
   font-family: "Poppins", sans-serif;
-}
-
-.hero {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("../images/hero-image.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 100vh;
 }
 
 .hero-name {
@@ -42,4 +36,31 @@ body {
 .price {
   font-size: 16px;
   color: darkslategray;
+}
+
+.background-img {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../images/hero-image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.about-img {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("../images/hero-image.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.about-name {
+  font-size: clamp(40px, 4vw, 200px);
+}
+
+.about-descript {
+  font-size: clamp(18px, 2vw, 32px);
+}
+
+.about-icon {
+  height: clamp(100px, 20vw, 200px);
+  width: clamp(100px, 20vw, 200px);
 }
